[package]
name = "crunkurrent"
version = "0.0.0"
authors = ["Samuel Ainsworth (skainsworth@gmail.com)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
ctrlc = "3.2.5"
tokio = { version = "1.25.0", features = ["process", "rt", "macros", "rt-multi-thread", "io-util", "sync"] }
